<resources>
    <string name="app_name">BromleyTourGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="history_of_bromley">History_of_bromley</string>
    <string name="culture">Culture</string>
    <string name="historic">Historic</string>
    <string name="public_places">Public_Places</string>
    <string name="places_to_eat">Places_to_Eate</string>
    <string name="history">History_of_bromley</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
